--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             </a>
                                         </li>
                                         <li>
-                                            <a target="_blank" href="#" class="soc-links__icon soc-links__icon--lg soc-links__icon--telegram">
+                                            <a target="_blank" href="https://t.me/skireew" class="soc-links__icon soc-links__icon--lg soc-links__icon--telegram">
                                                 <img src="img/telegram.svg" class="lazyload" alt="">
                                             </a>
                                         </li>
@@ -754,7 +754,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     </a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="#" class="soc-links__icon soc-links__icon--telegram">
+                                    <a target="_blank" href="https://t.me/skireew" class="soc-links__icon soc-links__icon--telegram">
                                         <img src="img/telegram.svg" class="lazyload" alt="">
                                     </a>
                                 </li>
