--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="header__cols">
                     <div class="header__col">
                         <a href="#page-body" class="logo header__logo scrollto">
-                            <img src="img/logo.svg" class="lazyload" alt="">
+                            <img src="img/logo-blue.png" class="lazyload" alt="">
                         </a>
                     </div>
                     <div class="header__col">
@@ -741,7 +741,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="footer-top__cols">
                         <div class="footer-top__col">
                             <a href="#page-body" class="logo footer__logo scrollto">
-                                <img src="img/logo.svg" class="lazyload" alt="">
+                                <img src="img/logo-blue.png" class="lazyload" alt="">
                             </a>
                         </div>
                         <div class="footer-top__col">
@@ -765,7 +765,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 Работаем 24\7. Без выходных и обеда. 
                             </div>
                             <div>
-                                <meta itemprop="image" content="img/logo.svg">
+                                <meta itemprop="image" content="img/logo-blue.png">
                                 <meta itemprop="name" content="Европейский Экспресс Кредит">
                                 <meta itemprop="telephone" content="+7 (495) 240-82-72">
                                 <link itemprop="url" href="https://euroexpresscredit.ru/">
