--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             </a>
                                         </li>
                                         <li>
-                                            <a target="_blank" href="#" class="soc-links__icon soc-links__icon--lg soc-links__icon--telegram">
+                                            <a target="_blank" href="https://t.me/skireew" class="soc-links__icon soc-links__icon--lg soc-links__icon--telegram">
                                                 <img src="img/telegram.svg" class="lazyload" alt="">
                                             </a>
                                         </li>
@@ -337,7 +337,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="review-item__text-container">
                                     <div class="review-item__text-hidden">
                                         <div class="review-item__text">
-                                            Оформлялся в Европейском экспрессе. Всё отлично, сотрудники грамотные, на все вопросы ответили. 
+                                            Оформлялся в Автомани. Всё отлично, сотрудники грамотные, на все вопросы ответили. 
                 Машину оценили в соответствии с рынком, денег не зажали. Вчера закрылся, сделали перерасчёт по процентам. Птс 
                 вернули сразу в том же офисе без проблем. Буду обращаться и рекомендовать.                                        </div>
                                     </div>
@@ -422,7 +422,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="review-item__text-container">
                                     <div class="review-item__text-hidden">
                                         <div class="review-item__text">
-                                            Возникла срочная необходимость в получении денежных средств, обратился в Европейский Экспресс Кредит, 
+                                            Возникла срочная необходимость в получении денежных средств, обратился в AutoMany, 
                 по совету знакомых, со-словами "там точно не обманут" Им есть с чем сравнивать , сказали , что там 
                 условия получше чем в др. местах и что при повторном обращении идет скидка по переплате (уже не первый 
                 раз обращаются). Приехал, заполнил анкету , провели осмотр машины. В целом, никаких негативных 
@@ -456,7 +456,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="review-item__text-container">
                                     <div class="review-item__text-hidden">
                                         <div class="review-item__text">
-                                            Закрыл договор в Евроэкспрессе, отписываюсь. Полет нормальный, ПТСку вернули сразу, как только 
+                                            Закрыл договор в Автомани24, отписываюсь. Полет нормальный, ПТСку вернули сразу, как только 
                 закрыл, не мурыжили. Вердикт – обращаться можно, адекватно работают.                                        </div>
                                     </div>
                                     <div class="review-item__show-more">
@@ -485,7 +485,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         <div class="review-item__text">
                                             Оформились 5 месяцев назад. На данный момент осталось выплачивать еще два месяца ти будем закрывать 
                 досрочно. Процент довольно высокий, в сравнении с Банком, но зато могу пользоваться своим авто и 
-                получили при этом деньги.Оформлялись у них в офисе на Верейской.                                        </div>
+                получили при этом деньги.Оформлялись у них в офисе.                                        </div>
                                     </div>
                                     <div class="review-item__show-more">
                                         <span>Читать далее</span>
@@ -508,7 +508,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <div class="review-item__text-hidden">
                                         <div class="review-item__text">
                                             Потерял работу, потом устроился, а деньги уже были на исходе, итак в долгах. Кредит не давали 
-                безработному, конечно. Решил взять деньги под птс в еврокредите. Там работу не проверяют. Ну в общем 
+                безработному, конечно. Решил взять деньги под птс в Автомани. Там работу не проверяют. Ну в общем 
                 дали без проблем, дела поправил. К счастью. Работа не подвела. Большую часть вернул сразу , конечно. 
                 А остальное с зп. Хороший путь для тех, кто в моем положении.                                        </div>
                                     </div>
@@ -618,8 +618,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <div class="review-item__text-hidden">
                                         <div class="review-item__text">
                                             Срочно понадобились деньги на отдых,а по банкам было очень долго и не факт,что одобрили бы. Решила 
-                обратиться к ним под залог Опеля. Быстро одобрили,деньги получили день в день. Менеджеру Дмитрию из 
-                офиса в Аннино огромное спасибо!                                        </div>
+                обратиться к ним под залог Опеля. Быстро одобрили,деньги получили день в день. Менеджеру Дмитрию&nbsp; огромное спасибо!                                        </div>
                                     </div>
                                     <div class="review-item__show-more">
                                         <span>Читать далее</span>
@@ -641,7 +640,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="review-item__text-container">
                                     <div class="review-item__text-hidden">
                                         <div class="review-item__text">
-                                            Евроэкспресскредиту спасибо, выручили. Деньги под птс удобная штука, тк машина
+                                            Автомани, спасибо, выручили. Деньги под птс удобная штука, тк машина
                 у тебя остается. Деньги они перечисляют в день обращения на карту. Если одобрили. Одобряют нормально, 
                 поскольку у меня на тот момент был первый месяц
                 на новой работе – все равно дали.                                        </div>
@@ -720,7 +719,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             </a>
                                         </li>
                                         <li>
-                                            <a target="_blank" href="#" class="soc-links__icon soc-links__icon--lg soc-links__icon--telegram">
+                                            <a target="_blank" href="https://t.me/skireew" class="soc-links__icon soc-links__icon--lg soc-links__icon--telegram">
                                                 <img src="img/telegram.svg" class="lazyload" alt="">
                                             </a>
                                         </li>
@@ -798,12 +797,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 Содействие в подборе финансовых услуг/организаций.
                             </p>
                             <p>
-                                Банк АО «Райффайзенбанк» Генеральная лицензия ЦБ на осуществление банковских операций № 3292 от 17.02.2015
-                            </p>
+                                Банк АО «Райффайзенбанк» Генеральная лицензия ЦБ на осуществление банковских операций&nbsp;</p>
                         </div>
                         <div class="footer-bottom__col">
                             <div class="footer__policy-link">
-                                <a target="_blank" href="/terms.pdf">Политика конфиденциальности</a>
+                                <a target="_blank" href="#">Политика конфиденциальности</a>
                             </div>
                             <div class="footer__dev footer__dev--md">
                                 <a target="_blank" href="#">
