--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-PTP9Q8S');</script>
 <!-- End Google Tag Manager -->
     <meta name="format-detection" content="telephone=no">
-    <title>Деньги под залог ПТС. Европейский Экспесс Кредит.</title>
+    <title>Деньги под залог ПТС. Столичный залоговый Дом.</title>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="robots" content="NOINDEX, NOFOLLOW"/>
     <meta property="og:image" content="" />
-    <meta property="og:title" content="Деньги под залог ПТС. Европейский Экспесс Кредит." />
+    <meta property="og:title" content="Деньги под залог ПТС. Столичный залоговый Дом" />
     <meta property="og:description" content="" />
 
 
@@ -40,7 +40,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </a>
                     </div>
                     <div class="header__col">
-                        <a href="#" class="btn btn--border scrollto header__button js-popup-open" onclick="ModalOpen()">Перезвоните мне</a>
+                        <a href="#" class="btn btn--border scrollto header__button js-popup-open" onclick="ModalOpen(); gtm-perezvon()">Перезвоните мне</a>
                         <a href="tel:+74952408272" class="header__phone phone-link icon-phone">
                             +7 (495) 240-82-72
                         </a>
@@ -63,7 +63,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </li>
                         </ul>
                         <form class="hero-form form getmoney-form" action="" method="post">
-                            <input type="hidden" name="page"  id="page" value="europexpresscredit.ru" />
+                            <input type="hidden" name="page" id="page" value="europexpresscredit.ru" />
                             <input type="hidden" name="source_id" id="source_id" value="39" />
                             <input type="hidden" name="comment" id="comment" value="Выездной офис" />
                             <div class="form-cols">
@@ -73,7 +73,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <div class="form-field-wrap__placeholder">
                                                 +7
                                             </div>
-                                            <input type="text" id="phone" name="phone" class="form-field required phone-mask js-focus" data-validate="phone" placeholder="000 000-00-00">
+                                            <input type="text" id="phone" name="phone" required class="form-field required phone-mask js-focus" placeholder="000 000-00-00">
                                         </div>
                                     </div>
                                 </div>
@@ -82,7 +82,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         Получить деньги
                                     </button>
                                     <div class="form-accept">
-                                        Нажимая на кнопку, я соглашаюсь с <a target="_blank" href="/terms.pdf">политикой конфиденциальности</a>
+                                        Нажимая на кнопку, я соглашаюсь с <a target="_blank" href="#">политикой конфиденциальности</a>
                                     </div>
                                 </div>
                             </div>
@@ -151,7 +151,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="form-field-wrap__placeholder">
                                     +7
                                 </div>
-                                <input type="text" name="phone" id="phone" class="form-field required phone-mask" data-validate="phone" placeholder="000 000-00-00">
+                                <input type="text" name="phone" id="phone" required class="form-field required phone-mask" placeholder="000 000-00-00">
                             </div>
                         </div>
                         <div class="form__or-container">
@@ -278,7 +278,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="form-field-wrap__placeholder">
                                     +7
                                 </div>
-                                <input type="text" name="phone" id="phone" class="form-field required phone-mask" data-validate="phone" placeholder="000 000-00-00">
+                                <input type="text" name="phone" id="phone" required class="form-field required phone-mask"  placeholder="000 000-00-00">
                             </div>
                         </div>
                         <div class="form__or-container">
@@ -701,7 +701,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="form-field-wrap__placeholder">
                                     +7
                                 </div>
-                                <input type="text" name="phone" id="phone" class="form-field required phone-mask" data-validate="phone" placeholder="000 000-00-00">
+                                <input type="text" name="phone" id="phone" required class="form-field required phone-mask" placeholder="000 000-00-00">
                             </div>
                         </div>
                         <div class="form__or-container">
@@ -836,7 +836,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="form-field-wrap__placeholder">
             +7
           </div>
-          <input type="text" name="phone" class="form-field required phone-mask" data-validate="phone" placeholder="000 000-00-00" im-insert="true">
+          <input type="text" name="phone" id="phone" required class="form-field required phone-mask" placeholder="000 000-00-00" im-insert="true">
         </div>
       </div>
       <button class="btn" type="submit">
